--- a/_config.yml
+++ b/_config.yml
@@ -74,8 +74,8 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: ""
-sidebar-avatar: 
+sidebar-about-description: "个人描述"
+# sidebar-avatar: 
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
