--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "个人描述"
+sidebar-about-description: "I’m interested in LLM,AI.I’m currently interning in Initi:AI company."
 sidebar-avatar: img/avatar.jpg
 
 # Featured Tags
