--- a/_config.yml
+++ b/_config.yml
@@ -53,18 +53,10 @@ kramdown:
       start_line: 1
 
 # Disqus settings
-disqus_username: sailorjs
+# disqus_username: sailorjs
 
 # Netease settings
 netease_comment: false
-
-# Analytics settings
-# Baidu Analytics
-# ba_track_id: [your track id]
-
-# Google Analytics
-#ga_track_id: "UA-49627206-1" # Format: UA-xxxxxx-xx
-# ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
