--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: SailorJS Blog
 SEOTitle: sailorjs的博客
 email: sailorjs0804@gmail.com
-description: "这是描述"
-keyword: "https://sailorjs0804.github.io"
-# url: "https://huangxuan.me" # your host, for absolute URL
+description: "个人博客"
+# keyword: ""
+url: "https://sailorjs0804.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
@@ -18,7 +18,7 @@ github_username: sailorjs0804
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
 permalink: pretty
-paginate: 10
+paginate: 5
 exclude:
   [
     "less",
@@ -52,9 +52,6 @@ kramdown:
       line_numbers: true
       start_line: 1
 
-# Disqus settings
-# disqus_username: sailorjs
-
 # Netease settings
 netease_comment: false
 
@@ -62,10 +59,6 @@ netease_comment: false
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "I’m interested in LLM,AI.I’m currently interning in Initi:AI company."
 sidebar-avatar: img/avatar.jpg
-
-# Featured Tags
-featured-tags: true # whether or not using Feature-Tags
-featured-condition-size: 1 # A tag will be featured if the size of it is more than this condition value
 
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
